test/type_inference/negative/subtype_fnargs1.impala
extern
fn foo() -> () {
    let bar = |i: &mut int| { *i = 42; };
    foobar(bar)
}
fn foobar(fun: fn(&int) -> ()) -> () { fun(45); fun(45); fun(55) }
