test/type_inference/negative/subtype_fnargs1.output
subtype_fnargs1.impala:4 col 12 - 14: error: mismatched types: expected 'fn(&i32) -> ()' but found 'fn(&mut i32) -> ()' as argument type
